--- a/index.html
+++ b/index.html
@@ -925,20 +925,14 @@ function updateUserBadge() {
   `;
 }
 
-function toggleMenu() {
-  const sidebar = document.getElementById("sidebar");
-  const overlay = document.getElementById("overlay");
+function toggleMenu(){
+  sidebar.classList.toggle("active");
+  overlay.classList.toggle("active");
 
-  const isOpen = sidebar.classList.contains("active");
-
-  if (isOpen) {
-    sidebar.classList.remove("active");
-    overlay.classList.remove("active");
-  } else {
-    sidebar.classList.add("active");
-    overlay.classList.add("active");
+  // 🔥 FORCE mobile repaint
+  document.body.style.overflow =
+    sidebar.classList.contains("active") ? "hidden" : "";
   }
-}
 
 function toggleTheme() {
   const isLight = document.body.classList.toggle("light");
@@ -1070,4 +1064,5 @@ document.addEventListener("DOMContentLoaded", () => {
 </script>
 
 </body>
+
 </html>
